--- a/antchain-bridge-plugin-test/pom.xml
+++ b/antchain-bridge-plugin-test/pom.xml
@@ -25,24 +25,18 @@
       <groupId>com.alipay.antchain.bridge</groupId>
       <artifactId>antchain-bridge-spi</artifactId>
       <version>0.2.3</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.web3j</groupId>
       <artifactId>core</artifactId>
       <version>4.9.8</version>
+      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -66,7 +60,7 @@
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.13.2</version>
-          <scope>compile</scope>
+          <scope>test</scope>
       </dependency>
       <dependency>
           <groupId>com.alipay.antchain.bridge</groupId>
@@ -93,7 +87,18 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>com.slc.antchain.PluginsTest</mainClass>
                 </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
               </transformers>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
             </configuration>
           </execution>
         </executions>
